--- a/app/views/users/friends_list.html.erb
+++ b/app/views/users/friends_list.html.erb
@@ -1,15 +1,12 @@
 
-<div style="text-align: center; padding-left: 150px">
-  <h3><b>Friends List</b></h3>
-</div>
-
-<% @friends.each do |friends| %>
 <table align="center" border="0">
   <tr>
-    <td><%= image_tag friends.avatar.url(:thumb) %></td>
-    <td><%= friends.firstname %></td>
+    <th><h3><b>Friends List</b></h3></th>
   </tr>
 </table>
+
+<% @friends.each do |friends| %>
+  <%= render :partial => "friends", :locals => {:friends => friends} %>
 <% end %>
 
 <div style="text-align: center;">
