--- a/app/views/users/socialbook_users.html.erb
+++ b/app/views/users/socialbook_users.html.erb
@@ -1,8 +1,8 @@
-<div style="text-align: center; padding-left: 200px;">
-  <h3><b>SocialBook Users</b></h3>
- 
-</div>
-
+<table align="center" border="0">
+  <tr>
+    <th><h3><b>Users</b></h3></th>
+  </tr>
+</table
 <% @user.each do |user| %>
 <table align="center" border="0">
   <tr>
