--- a/app/views/users/welcome_page.html.erb
+++ b/app/views/users/welcome_page.html.erb
@@ -38,7 +38,8 @@
 </div>
 
 <div style="float: right; width: 15%;">
-  <%= link_to "Create event", create_event_path %>
+  <%= link_to "Create event", create_event_path %><br /><br />
+  <%= link_to "Events", users_list_events_path %>
 </div>
 
 <div style="clear: both"/>
