--- a/app/views/users/change_password.html.erb
+++ b/app/views/users/change_password.html.erb
@@ -1,4 +1,8 @@
 
+<div style="text-align: left;">
+  <%= link_to "Back", users_profile_settings_path %>
+</div>
+
 <%= form_for(@user, :url => {:action => "change_password"}) do |f| %>
 <table align="center" border="0">
   <tr>
@@ -22,8 +26,7 @@
 
   <tr>
     <td><%= f.submit :save %></td>
-    <td><%= button_tag :cancel, :type => "reset" %></td>
+    <td><%= button_to :cancel, :type => "reset" %></td>
   </tr>
-
 </table>
 <% end %>
