--- a/app/views/users/list_events.html.erb
+++ b/app/views/users/list_events.html.erb
@@ -4,8 +4,7 @@
 </div>
 <br />
 
-
-<% @event_list.each do |u| %>
+<% current_user.receiver_events.each do |u| %>
 <table align="center" border="0">
   <tr>
     <td><%= u.user.firstname %></td>
@@ -18,12 +17,30 @@
 </table>
 <% end %>
 
-<%# @event_list.each do |event| %>
-  <%#= event.name %>
-  <%#= event.description %>
-  <%#= event.venue %>
-  <%#= event.start_datetime %>
-  <%#= event.end_datetime %>
-<%# end %>
+<div style="text-align: center; color: darkblue;">
+  <b><h3>Events created</h3></b>
+  <% if current_user.events.empty? %>
+   <h3>no events created</h3>
+  <% else %>
+  <% current_user.events.each do |u| %>
+  <table align="center" border="0">
+  <tr>
+    <td><%= u.user.firstname %></td>
+    <td><%= u.name %></td>
+    <td><%= u.description %></td>
+    <td><%= u.venue %></td>
+    <td><%= u.start_datetime %></td>
+    <td><%= u.end_datetime %></td>
+  </tr>
+  </table>
+<% end %>
+<% end %>
+
+</div>
+
+
+
+
+
 
 
