--- a/app/views/users/_friends.html.erb
+++ b/app/views/users/_friends.html.erb
@@ -1,5 +1,5 @@
 
-<table align="center" border="0">
+<table align="left" border="0">
   <tr>
     <td><%= image_tag friends.avatar.url(:thumb) %></td>
     <td><%= link_to friends.firstname, friends_profile_path(friends.id)%></td>
